# exemplar

./: BRANCH-POLICY.md  CMakeLists.txt  Makefile  README.md  copier.yml  new_project_from_exemplar.py  pyproject.toml  stamp.sh
.github/workflows/: catch2_exemplar_test.yml  ci_tests.yml  copier_test.yml  todo_exemplar_test.yml  vcpkg-release.yml
cmake/: gcovr.cfg.in
cookiecutter/: check_cookiecutter.sh  cookiecutter.json
cookiecutter/hooks/: post_gen_project.py
cookiecutter/{{cookiecutter.project_name}}/: CMakeLists.txt  CONTRIBUTING.md  README.md
cookiecutter/{{cookiecutter.project_name}}/.github/workflows/: ci_tests.yml
cookiecutter/{{cookiecutter.project_name}}/examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp
cookiecutter/{{cookiecutter.project_name}}/include/beman/{{cookiecutter.__project_ident}}/: CMakeLists.txt  config.hpp  config_generated.hpp.in  identity.hpp  {{cookiecutter.__project_ident}}.cppm  {{cookiecutter.__project_ident}}.hpp
cookiecutter/{{cookiecutter.project_name}}/port/: portfile.cmake.in  vcpkg.json.in
cookiecutter/{{cookiecutter.project_name}}/tests/beman/{{cookiecutter.__project_ident}}/: CMakeLists.txt  identity.test.cpp
copier/: MAINTAINERS.md  check_copier.sh  format_project.sh  lint_standard_project.sh  test_cmake_matrix.sh  test_standard_project.sh  update_templates.py
infra/: .beman_submodule
infra/cmake/: enable-experimental-import-std.cmake
port/: portfile.cmake.in
template/: .beman-tidy.yaml.jinja  .copier-answers.yml.jinja  .gitattributes.jinja  .pre-commit-config.yaml.jinja  CMakeLists.txt.jinja  CMakePresets.json.jinja  CONTRIBUTING.md.jinja  Makefile.jinja  README.md.jinja  lockfile.json.jinja  pyproject.toml.jinja  vcpkg.json.jinja
template/.github/: CODEOWNERS.jinja
template/.github/workflows/: ci_tests.yml.jinja  pre-commit-update.yml.jinja  vcpkg-release.yml.jinja
template/cmake/: gcovr.cfg.in.jinja
template/examples/: CMakeLists.txt.jinja  identity_as_default_projection.cpp.jinja  identity_direct_usage.cpp.jinja
template/include/beman/{{ project_ident }}/: CMakeLists.txt.jinja  config.hpp.jinja  config_generated.hpp.in.jinja  identity.hpp.jinja  {{ project_ident }}.cppm.jinja  {{ project_ident }}.hpp.jinja
template/include/beman/{{ project_name }}/: CMakeLists.txt.jinja  config.hpp.jinja  config_generated.hpp.in.jinja  identity.hpp.jinja  {{ project_name }}.cppm.jinja  {{ project_name }}.hpp.jinja
template/infra/: .beman_submodule.jinja
template/infra/.github/workflows/: pre-commit.yml.jinja  reusable-beman-create-issue-when-fault.yml.jinja
template/infra/cmake/: enable-experimental-import-std.cmake.jinja
template/port/: portfile.cmake.in.jinja  vcpkg.json.in.jinja
template/tests/beman/{{ project_ident }}/: CMakeLists.txt.jinja  identity.test.cpp.jinja
template/tests/beman/{{ project_name }}/: CMakeLists.txt.jinja  identity.test.cpp.jinja
