# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

{% if cookiecutter._generating_exemplar %}
set(ALL_EXAMPLES identity_direct_usage)

# Example `identity_as_default_projection` need ranges support:
include(CheckCXXSymbolExists)
check_cxx_symbol_exists(__cpp_lib_ranges "ranges" HAS_RANGES)

if(HAS_RANGES)
    list(APPEND ALL_EXAMPLES identity_as_default_projection)
else()
    message(
        WARNING
        "Missing range support! Skip: identity_as_default_projection"
    )
endif()

{% else %}
set(ALL_EXAMPLES todo)
{% endif %}
message("Examples to be built: ${ALL_EXAMPLES}")

foreach(example ${ALL_EXAMPLES})
    add_executable(beman.{{cookiecutter.__project_ident}}.examples.${example})
    target_sources(beman.{{cookiecutter.__project_ident}}.examples.${example} PRIVATE ${example}.cpp)
    target_link_libraries(
        beman.{{cookiecutter.__project_ident}}.examples.${example}
        PRIVATE beman::{{cookiecutter.__project_ident}}
    )
    if(BEMAN_{{cookiecutter.__project_ident.upper()}}_USE_MODULES)
        set_target_properties(
            beman.{{cookiecutter.__project_ident}}.examples.${example}
            PROPERTIES CXX_MODULE_STD ON
        )
    endif()
endforeach()
